navbar collapse on click fix

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -101,6 +101,11 @@ body {
     color: #fff;
 }
 
+.nav-link {
+  border-bottom: 1px dashed rgba(255, 255, 255, .5);
+  padding-bottom: 4px;
+  padding-top: 4px;
+}
 .header-background .navbar-dark .navbar-nav .nav-link.active {
   font-weight: bolder;
 }
@@ -149,6 +154,7 @@ body {
   border-right: 1px solid #666; */
   color: #fff;
   padding-top: 25px;
+  padding-bottom: 15px;
   /*margin: 10px;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .5), 0 6px 20px 0 rgba(0, 0, 0, .51);*/
 }
